:lipstick: Fix panel alignment on small screens

--- a/src/molkobain-datacenter-view/common/css/datacenter-view.scss
+++ b/src/molkobain-datacenter-view/common/css/datacenter-view.scss
@@ -155,7 +155,7 @@ $obj-class-pdu-bg-color: #c85454;
 
 			.mdv-rack-panel,
 			.mdv-enclosure-panel{
-				margin-right: 9rem;
+				margin-right: 8rem;
 
 				&:last-child{
 					margin-right: 0;
